--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
       </tr>
     </thead>
     <tr>
-    <td>'date'</td>
-    <td>'experience'</td>
+    <td>2015-2021</td>
+    <td>Cricket Coach</td>
     </tr>
     <tr>
-      <td>Date</td>
-      <td>Expericnce</td>
+      <td>2018</td>
+      <td>Junior Analyst</td>
     </tr>
   </table>
   <hr>
