--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <td>  <img src="https://media-exp1.licdn.com/dms/image/C5603AQHat7ZWR7yrZQ/profile-displayphoto-shrink_200_200/0/1610488965844?e=1619654400&v=beta&t=mlS1_V_WVuK5oaGXW_rEubv71KQ9Ondu4lvpF4cdf5Q" alt="Fred Profile Picture"></td>
+      <td>  <img src="circle-cropped.png" alt="Fred Profile Picture"></td>
       <td><h1>Fred McMillan</h1>
       <p><em>MSc Student at the<strong> University of Surrey</strong></em></p>
       <p>I am a masters student at the University of Surrey studying Digital Marketing and Channel Management</p></td>
