--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <table cellspacing=20>
     <tr>
-      <img src="circle-cropped.png" alt="Fred Profile Picture">
-      <h1>Fred McMillan</h1>
+      <td>  <img src="circle-cropped.png" alt="Fred Profile Picture"></td>
+      <td><h1>Fred McMillan</h1>
       <p><em>MSc Student at the<strong> University of Surrey</strong></em></p>
       <p>I am a masters student at the University of Surrey studying Digital Marketing and Channel Management</p></td>
     </tr>
